[package]
name = "rc5-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rahul <rahulbuildsdefi@gmail.com>"]
description = "A pure Rust implementation of the RC5 block cipher"
license = "MIT"
repository = "https://github.com/andropixels/rc5-rs.git"
keywords = ["cryptography", "cipher", "rc5", "encryption", "security"]
categories = ["cryptography", "algorithms"]

[dependencies]
byteorder = "1.4"